--- a/myOS.html
+++ b/myOS.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <title>myOS</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="stylesheet" href="myOS.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
