--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="myOS">
-    <meta name="description" content="">
+    <meta name="description" content="🪐 myOS / Özelleşitilmiş, hafifleştirilmiş ve hızlandırılmış Windows 10 sürümünün resmi internet sitesi.">
     <title>myOS</title>
     <link rel="stylesheet" href="site.css" media="screen">
     <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
