--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html style="font-size: 16px;" lang="tr"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="myOS">
+    <meta name="keywords" content="myOS, myOS-tr, myOS tr, windows, ntlite, windows lite">
+    <meta name="author" content="Spydea">
     <meta name="description" content="🪐 myOS / Özelleşitilmiş, hafifleştirilmiş ve hızlandırılmış Windows 10 sürümünün resmi internet sitesi.">
     <title>myOS</title>
     <link rel="stylesheet" href="site.css" media="screen">
@@ -24,6 +25,8 @@
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="myOS">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="images/myos.png">
+    <meta property="og:description" content="🪐 myOS / Özelleşitilmiş, hafifleştirilmiş ve hızlandırılmış Windows 10 sürümünün resmi internet sitesi.">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-home-page="https://website4510896.nicepage.io/myOS.html?version=49290dae-856b-4bcf-95de-45eda983d7ae" data-home-page-title="myOS" class="u-body u-gradient u-overlap u-xl-mode" data-lang="tr" style="background-image: linear-gradient(135deg, black, #333333);"><header class="u-clearfix u-header u-header" id="sec-db69"><div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-custom-font u-text u-text-default u-text-white u-title u-text-1">myOS</h1>
