--- a/myOS.html
+++ b/myOS.html
@@ -32,7 +32,7 @@
         <h1 class="u-custom-font u-text u-text-default u-text-white u-title u-text-1">myOS</h1>
         <a href="indirmelinki" class="u-border-none u-btn u-btn-round u-button-style u-gradient u-none u-radius-50 u-btn-1">İndir</a>
         <a href="https://discord.io/myos" class="u-border-none u-btn u-btn-round u-button-style u-gradient u-none u-radius-50 u-btn-2">İletişim</a>
-        <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/discord-removebg-preview.png" alt="" data-image-width="490" data-image-height="490">
+        <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/myos.png" alt="" data-image-width="490" data-image-height="490">
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-6d6c">
       <div class="u-clearfix u-sheet u-sheet-1">
