--- a/myOS.html
+++ b/myOS.html
@@ -25,7 +25,7 @@
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="myOS">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/myos.png">
+    <meta property="og:image" content="https://myos-tr.github.io/images/myos.png">
     <meta property="og:description" content="🪐 myOS / Özelleştirilmiş, hafifleştirilmiş ve hızlandırılmış Windows 10 sürümünün resmi internet sitesi.">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body class="u-body u-gradient u-overlap u-xl-mode" data-lang="tr" style="background-image: linear-gradient(135deg, black, #333333);"><header class="u-clearfix u-header u-header" id="sec-db69"><div class="u-clearfix u-sheet u-sheet-1">
