--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="fr-view u-clearfix u-rich-text u-text u-text-1">
           <h1 style="text-align: center;">
             <span class="u-custom-font u-font-oswald">
-              <span class="u-text-grey-40">Kaynak Kodları</span>
+              <span class="u-text-grey-40">Github Sayfası</span>
             </span>
           </h1>
           <p style="text-align: center;">
