--- a/myOS.html
+++ b/myOS.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;" lang="tr"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="myOS, myOS-tr, myOS tr, windows, ntlite, windows lite">
+    <meta name="keywords" content="myOS, myOS-tr, myOS tr, myOS github, myOS-tr github, myOS tr github, windows, ntlite, windows lite">
     <meta name="author" content="Spydea">
     <meta name="description" content="🪐 myOS / Özelleştirilmiş, hafifleştirilmiş ve hızlandırılmış Windows 10 sürümünün resmi internet sitesi.">
     <title>myOS</title>
@@ -123,7 +123,7 @@
         <div class="fr-view u-clearfix u-rich-text u-text u-text-1">
           <h1 style="text-align: center;">
             <span class="u-custom-font u-font-oswald">
-              <span class="u-text-grey-40">Kaynak Kodları</span>
+              <span class="u-text-grey-40">GitHub sayfası</span>
             </span>
           </h1>
           <p style="text-align: center;">
